test/expressions/if-expr/error-diff-types.good
error-diff-types.chpl:4: error: Unable to resolve type of if-expression
note: 'then' branch returns type "int(64)"
note: 'else' branch returns type "string"
