test/expressions/if-expr/error-diff-types.chpl

config const cond : bool;

var foo = if cond then 1 else "hi";
